--- a/ABM.Paie/Pages/Contact.razor
+++ b/ABM.Paie/Pages/Contact.razor
@@ -32,12 +32,12 @@
 <div style="text-align:justify;margin-bottom:20px;">
     <div style="margin:20px 0px;">
         <div class="d-flex flex-wrap align-top">
-			<a href="/Contact/Rdv">
+			<a href="@($"/{nameof(Contact)}/Rdv")">
 				<MudText Class="indigo-text" Typo="Typo.h6">
 					Réserver un créneau horaire
 				</MudText>
 			</a>
-            <a href="/Contact/Rdv">
+            <a href="@($"/{nameof(Contact)}/Rdv")">
                 <MudIcon Class="indigo-text text-lighten-2" Icon="@Icons.Material.TwoTone.ArrowCircleRight" Style="margin:5px 0px 0px 5px;" />
             </a>
         </div>
@@ -47,12 +47,12 @@
         </MudText>
 
         <div class="d-flex flex-wrap align-top">
-			<a href="/Contact/Coordonnees">
+			<a href="@($"/{nameof(Contact)}/Coordonnees")">
 				<MudText Class="indigo-text" Typo="Typo.h6">
 					Contact direct
 				</MudText>
 			</a>
-			<a href="/Contact/Coordonnees">
+			<a href="@($"/{nameof(Contact)}/Coordonnees")">
                 <MudIcon Class="indigo-text text-lighten-2" Icon="@Icons.Material.TwoTone.ArrowCircleRight" Style="margin:5px 0px 0px 5px;" />
             </a>
         </div>
