--- a/ABM.Paie/Pages/Home.razor
+++ b/ABM.Paie/Pages/Home.razor
@@ -1,38 +1,40 @@
 ﻿@page "/"
+@using ABM.Paie.Components
+@using ABM.Paie.Models
 
 @{
-    var quotes = new List<string[]>()
+    var quotes = new List<Quote>()
     {
-        new[] { "Rien ne prédispose plus au conformisme que le manque de formation.", "Gustave Thibon" },
-        new[] { "Le savoir est la seule matière qui s'accroit avec le partage.", "Socrate" },
-        new[] { "L'apprentissage est un trésor qui suivra son propriétaire partout.", "Proverbe chinois" },
-        new[] { "Tu me dis, j'oublie. Tu m'enseignes, je me souviens. Tu m'impliques, j'apprends.", "Benjamin Franklin" },
-        new[] { "C'est ce que nous pensons déjà connaître qui nous empêche souvent d'apprendre.", "Claude Bernard" },
-        new[] { "On commence à vieillir quand on finit d'apprendre.", "Proverbe japonais" },
-        new[] { "Qui a peur de poser des questions a honte d'apprendre.", "Proverbe danois" },
-        new[] { "Chaque difficulté rencontrée doit être l'occasion d'un nouveau progrès.", "Pierre de Coubertin" },
-        new[] { "On ne vide pas l'océan avec un coquillage.", "Proverbe japonais" },
-        new[] { "Le secret du changement, c'est de concentrer toute notre énergie non pas à lutter contre le passé mais à construire l'avenir.", "Socrate" },
-        new[] { "Un bon maçon ne rejette aucune pierre.", "Proverbe néerlandais" },
-        new[] { "Le chemin du succès se bâtit sur une série d'échecs sans perdre son enthousiasme.", "Winston Churchill" },
-        new[] { "La vérité de demain se nourrit de l'erreur d'hier.", "Antoine de Saint-Exupéry" },
-        new[] { "Les chefs-d'œuvre ne sont jamais que des tentatives heureuses.", "George Sand" },
-        new[] { "Dans la vie rien n'est à craindre tout est à comprendre.", "Marie Curie" },
-        new[] { "Ne craignez pas d'être lent, craignez seulement d'être à l'arrêt.", "Proverbe chinois" },
-        new[] { "La curiosité mène à tout : parfois à écouter aux portes, parfois à découvrir l'Amérique.", "José Maria Eça de Queiros" },
-        new[] { "Si vous pensez que la formation coûte cher, songez au prix de l'ignorance.", "Ray Kroc" },
-        new[] { "Nous nous voyons comme des oeuvres d'art inachevées. Nous passons de plus en plus de temps à corriger, à améliorer notre corps. Nous sommes toujours en formation, jamais finis.", "Jeremy Rifkin" },
-        new[] { "Le sens de la vie c'est apprendre toujours, apprendre et transmettre parce que transmettre c'est donner, donner c'est aider, aider c'est avancer, avancer c'est grandir.", "Zineve" },
-        new[] { "J'essaie toujours de faire ce que je ne sais pas faire, c'est ainsi que j'espère apprendre à le faire.", "Pablo Picasso" },
-        new[] { "Ne regrette rien, il faudra toujours continuer à apprendre et à te perfectionner, et ce n'est pas à l'école que tu pourras le faire. L'école donne des diplômes, mais c'est dans la vie qu'on se forme.", "Amadou-hampâté-bâ" },
-        new[] { "La véritable éducation, c'est d'apprendre comment penser, et non pas quoi penser.", "Jiddu-krishnamurti" },
-        new[] { "Je suis toujours prêt à apprendre, bien que je n'aime pas toujours qu'on me donne des leçons.", "Winston Churchill" },
-        new[] { "Ce que nous devons apprendre à faire, nous l'apprendrons en le faisant.", "Aristote" },
-        new[] { "Il faut apprendre pour connaître, connaître pour comprendre, comprendre pour juger.", "Narada" },
-        new[] { "Il faut apprendre, non pas pour l'amour de la connaissance, mais pour se défendre contre le mépris dans lequel le monde tient les ignorants.", "Charlie Chaplin" },
-        new[] { "Quand tu parles, tu ne fais que répéter ce que tu sais. Mais quand tu écoutes, tu peux apprendre quelque chose de nouveau.", "Dalaï-lama Tenzin-Gyatso" },
-        new[] { "Celui qui aime à apprendre est bien près du savoir.", "Confucius" },
-        new[] { "Il est impossible d'apprendre un métier tout seul. Une bougie s'allume au contact de la flamme d'une autre bougie. Si elle ne s'en approche pas elle restera éteinte.", "Sultan Valad" },
+        new("Gustave Thibon", "Rien ne prédispose plus au conformisme que le manque de formation."),
+        new("Socrate", "Le savoir est la seule matière qui s'accroit avec le partage."),
+        new("Proverbe chinois", "L'apprentissage est un trésor qui suivra son propriétaire partout."),
+        new("Benjamin Franklin", "Tu me dis, j'oublie. Tu m'enseignes, je me souviens. Tu m'impliques, j'apprends."),
+        new("Claude Bernard", "C'est ce que nous pensons déjà connaître qui nous empêche souvent d'apprendre."),
+        new("Proverbe japonais", "On commence à vieillir quand on finit d'apprendre."),
+        new("Proverbe danois", "Qui a peur de poser des questions a honte d'apprendre."),
+        new("Pierre de Coubertin", "Chaque difficulté rencontrée doit être l'occasion d'un nouveau progrès."),
+        new("Proverbe japonais", "On ne vide pas l'océan avec un coquillage."),
+        new("Socrate", "Le secret du changement, c'est de concentrer toute notre énergie non pas à lutter contre le passé mais à construire l'avenir."),
+        new("Proverbe néerlandais", "Un bon maçon ne rejette aucune pierre."),
+        new("Winston Churchill", "Le chemin du succès se bâtit sur une série d'échecs sans perdre son enthousiasme."),
+        new("Antoine de Saint-Exupéry", "La vérité de demain se nourrit de l'erreur d'hier."),
+        new("George Sand", "Les chefs-d'œuvre ne sont jamais que des tentatives heureuses."),
+        new("Marie Curie", "Dans la vie rien n'est à craindre tout est à comprendre."),
+        new("Proverbe chinois", "Ne craignez pas d'être lent, craignez seulement d'être à l'arrêt."),
+        new("José Maria Eça de Queiros", "La curiosité mène à tout : parfois à écouter aux portes, parfois à découvrir l'Amérique."),
+        new("Ray Kroc", "Si vous pensez que la formation coûte cher, songez au prix de l'ignorance."),
+        new("Jeremy Rifkin", "Nous nous voyons comme des oeuvres d'art inachevées. Nous passons de plus en plus de temps à corriger, à améliorer notre corps. Nous sommes toujours en formation, jamais finis."),
+        new("Zineve", "Le sens de la vie c'est apprendre toujours, apprendre et transmettre parce que transmettre c'est donner, donner c'est aider, aider c'est avancer, avancer c'est grandir."),
+        new("Pablo Picasso", "J'essaie toujours de faire ce que je ne sais pas faire, c'est ainsi que j'espère apprendre à le faire."),
+        new("Amadou-hampâté-bâ", "Ne regrette rien, il faudra toujours continuer à apprendre et à te perfectionner, et ce n'est pas à l'école que tu pourras le faire. L'école donne des diplômes, mais c'est dans la vie qu'on se forme."),
+        new("Jiddu-krishnamurti", "La véritable éducation, c'est d'apprendre comment penser, et non pas quoi penser."),
+        new("Winston Churchill", "Je suis toujours prêt à apprendre, bien que je n'aime pas toujours qu'on me donne des leçons."),
+        new("Aristote", "Ce que nous devons apprendre à faire, nous l'apprendrons en le faisant."),
+        new("Narada", "Il faut apprendre pour connaître, connaître pour comprendre, comprendre pour juger."),
+        new("Charlie Chaplin", "Il faut apprendre, non pas pour l'amour de la connaissance, mais pour se défendre contre le mépris dans lequel le monde tient les ignorants."),
+        new("Dalaï-lama Tenzin-Gyatso", "Quand tu parles, tu ne fais que répéter ce que tu sais. Mais quand tu écoutes, tu peux apprendre quelque chose de nouveau."),
+        new("Confucius", "Celui qui aime à apprendre est bien près du savoir."),
+        new("Sultan Valad", "Il est impossible d'apprendre un métier tout seul. Une bougie s'allume au contact de la flamme d'une autre bougie. Si elle ne s'en approche pas elle restera éteinte."),
     };
 
     var r = new Random();
@@ -74,23 +76,16 @@
     		Mon objectif est de faire monter en compétence vos gestionnaires de paie sur les domaines de la paie et de la DSN via le logiciel MySilae.
     	</MudText>
     </div>
-    
-    <MudCarousel Class="mud-width-full white-text" Style="height:180px;" ShowBullets="false" TData="object" AutoCycleTime="TimeSpan.FromSeconds(10)">
-        @foreach(var quote in quotes1)
-        {
-			<MudCarouselItem Class="center indigo lighten-4 white-text" Transition="Transition.Fade" Style="margin:50px 0px;">
-				<div style="width:80%;"><i>@quote[0]</i> <span class="indigo-text" style="white-space:nowrap;">@quote[1]</span></div>
-            </MudCarouselItem>
-        }
-    </MudCarousel>
-    
+
+    <QuoteCarousel Quotes="quotes1" />
+
     <div class="center" style="margin:60px 0;">
         <div style="margin:0px 20px">
             <MudText Class="indigo-text" Typo="Typo.h5">
                 <b>3300+ heures de formations dispensées chez Silae</b><br />
             </MudText>
             <MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" 
-                Href="/Experience/Chiffres" 
+                Href="@($"/{nameof(Experience)}/Chiffres")" 
                 EndIcon="@Icons.Material.TwoTone.ArrowCircleRight" Style="text-transform:none;">
                 en savoir plus
             </MudButton>
@@ -100,7 +95,7 @@
                 <b>8 ans d'expérience Silae : Formatrice et Responsable Silae Académie</b><br />
             </MudText>
             <MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" 
-                Href="/Experience/Silae" 
+                Href="@($"/{nameof(Experience)}/Silae")" 
                 EndIcon="@Icons.Material.TwoTone.ArrowCircleRight" Style="text-transform:none;">
                 en savoir plus
             </MudButton>
@@ -110,7 +105,7 @@
                 <b>430+ formations dispensées chez Silae</b><br />
             </MudText>
             <MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" 
-                Href="/Experience/Chiffres" 
+                Href="@($"/{nameof(Experience)}/Chiffres")" 
                 EndIcon="@Icons.Material.TwoTone.ArrowCircleRight" Style="text-transform:none;">
                 en savoir plus
             </MudButton>
@@ -127,15 +122,8 @@
             </MudButton>
         </MudText>
     </div>
-    
-    <MudCarousel Class="mud-width-full white-text" Style="height:180px;" ShowBullets="false" TData="object" AutoCycleTime="TimeSpan.FromSeconds(10)">
-        @foreach (var quote in quotes2)
-        {
-            <MudCarouselItem Class="center indigo lighten-4 white-text" Transition="Transition.Fade" Style="margin:50px 0px;">
-                <div style="width:80%;"><i>@quote[0]</i> <span class="indigo-text" style="white-space:nowrap;">@quote[1]</span></div>
-            </MudCarouselItem>
-        }
-    </MudCarousel>
+
+    <QuoteCarousel Quotes="quotes2" />
     
     <div class="center" style="margin:60px 0;">
         <MudText Class="indigo-text" Typo="Typo.h5">
@@ -153,15 +141,8 @@
         </div>
     </div>
     
-    <MudCarousel Class="mud-width-full white-text" Style="height:180px;" ShowBullets="false" TData="object" AutoCycleTime="TimeSpan.FromSeconds(10)">
-        @foreach (var quote in quotes3)
-        {
-            <MudCarouselItem Class="center indigo lighten-4 white-text" Transition="Transition.Fade" Style="margin:50px 0px;">
-                <div style="width:80%;"><i>@quote[0]</i> <span class="indigo-text" style="white-space:nowrap;">@quote[1]</span></div>
-            </MudCarouselItem>
-        }
-    </MudCarousel>
-    
+    <QuoteCarousel Quotes="quotes3" />
+
     <div class="center" style="margin:60px 0;">
     	<div style="width:stretch;">
             <MudText Class="indigo-text" Typo="Typo.h5">
@@ -169,7 +150,7 @@
             </MudText>
             <MudText Typo="Typo.h5" Style="margin:20px;">Satisfaction : 95 %</MudText>
             <MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text"
-                Href="/ABM-Paie/Indicateurs" 
+                Href="@($"/{nameof(AbmPaie)}/Indicateurs")" 
                 EndIcon="@Icons.Material.TwoTone.ArrowCircleRight" Style="text-transform:none;">
                 en savoir plus
             </MudButton>
@@ -193,22 +174,15 @@
                 <div style="width:80px;" /><div style="width:80px;" /><div style="width:80px;" /><div style="width:80px;" /><div style="width:120px;"><MudText Class="white" Typo="Typo.h6">Curiosité</MudText></div>
 			</div>
             <MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" 
-                Href="/ABM-Paie/Valeurs"
+                Href="@($"/{nameof(AbmPaie)}/Valeurs")"
                 EndIcon="@Icons.Material.TwoTone.ArrowCircleRight" Style="text-transform:none;">
                 en savoir plus
             </MudButton>
         </div>
     </div>
-    
-    <MudCarousel Class="mud-width-full white-text" Style="height:180px;" ShowBullets="false" TData="object" AutoCycleTime="TimeSpan.FromSeconds(10)">
-        @foreach (var quote in quotes4)
-        {
-            <MudCarouselItem Class="center indigo lighten-4 white-text" Transition="Transition.Fade" Style="margin:50px 0px;">
-                <div style="width:80%;"><i>@quote[0]</i> <span class="indigo-text" style="white-space:nowrap;">@quote[1]</span></div>
-            </MudCarouselItem>
-        }
-    </MudCarousel>
-    
+
+    <QuoteCarousel Quotes="quotes4" />
+
     <div class="center" style="margin:50px 0;">
         <div>
             <MudText Class="indigo-text" Typo="Typo.h5">
@@ -228,7 +202,7 @@
                 </MudCardContent>
                 <MudCardActions>
                     <MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" 
-                        Href="/Actualites" 
+                        Href="@($"/{nameof(Actualites)}")" 
                         EndIcon="@Icons.Material.TwoTone.ArrowCircleRight" Style="text-transform:none;">
                         en savoir plus
                     </MudButton>
@@ -237,15 +211,8 @@
         </div>
     </div>
     
-    <MudCarousel Class="mud-width-full white-text" Style="height:180px;" ShowBullets="false" TData="object" AutoCycleTime="TimeSpan.FromSeconds(10)">
-        @foreach (var quote in quotes5)
-        {
-			<MudCarouselItem Class="center indigo lighten-4 white-text" Transition="Transition.Fade" Style="margin:50px 0px;">
-                <div style="width:80%;"><i>@quote[0]</i> <span class="indigo-text" style="white-space:nowrap;">@quote[1]</span></div>
-            </MudCarouselItem>
-        }
-    </MudCarousel>
-    
+    <QuoteCarousel Quotes="quotes5" />
+
     <div class="center" style="margin:30px 0 60px 0;">
     	<div>
             <MudText Class="indigo-text" Typo="Typo.h5">
