fix: rename pages Actualite and Formation

--- a/ABM.Paie/Layout/MainFooter.razor
+++ b/ABM.Paie/Layout/MainFooter.razor
@@ -10,26 +10,26 @@
 
 		<br />
 
-		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Formations)}")" Style="margin:40px 0px 0px 0px;">
+		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Formation)}")" Style="margin:40px 0px 0px 0px;">
 			<MudText Typo="Typo.h5">
 				<b>Formations</b>
 			</MudText>
 		</MudButton>
 		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Formations)}/Catalogue")" Style="padding:0px 8px">
+		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Formation)}/Catalogue")" Style="padding:0px 8px">
 			<MudText>
 				Catalogue en ligne
 			</MudText>
 		</MudButton>
 		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Formations)}/Perfectionnement")" Style="padding:0px 8px">
+		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Formation)}/Perfectionnement")" Style="padding:0px 8px">
 			<MudText>
 				Perfectionnement
 			</MudText>
 		</MudButton>
 	</div>
 	<div style="padding:20px;width:400px;">
-		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Actualites)}")">
+		<MudButton Class="white-text" Variant="Variant.Text" Href="@($"/{nameof(Actualite)}")">
 			<MudText Typo="Typo.h5">
 				<b>Actualités</b>
 			</MudText>
