--- a/ABM.Paie/Layout/MainHeader.razor
+++ b/ABM.Paie/Layout/MainHeader.razor
@@ -10,10 +10,10 @@
 	var formationItems = new MenuButton[]
 	{
 		new("Catalogue en ligne", "https://abmformation.catalogueformpro.com", true),
-		new("Perfectionnement", $"/{nameof(Formations)}/Perfectionnement"),
+		new("Perfectionnement", $"/{nameof(Formation)}/Perfectionnement"),
 	};
 
-	var actualiteActivator = new MenuButton("Actualités", $"/{nameof(Actualites)}");
+	var actualiteActivator = new MenuButton("Actualités", $"/{nameof(Actualite)}");
 
 	var abmPaieActivator = new MenuButton("ABM Paie".ToBold());
 	var abmPaieItems = new MenuButton[]
