--- a/ABM.Paie/Pages/Home.razor
+++ b/ABM.Paie/Pages/Home.razor
@@ -202,7 +202,7 @@
                 </MudCardContent>
                 <MudCardActions>
                     <MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" 
-                        Href="@($"/{nameof(Actualites)}")" 
+                        Href="@($"/{nameof(Actualite)}")" 
                         EndIcon="@Icons.Material.TwoTone.ArrowCircleRight" Style="text-transform:none;">
                         en savoir plus
                     </MudButton>
